--- a/JA_Image_Project/JA_Image_Project.csproj
+++ b/JA_Image_Project/JA_Image_Project.csproj
@@ -63,6 +63,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Filters.cs" />
+    <Compile Include="HELPER.cs" />
     <Compile Include="TimeFormats.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
